<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_button_2pick">2Pick記録</string>
    <string name="add_button_deck">デッキ追加</string>
    <string name="add_button_record">戦績記録</string>
    <string name="app_name">Shadowverse Log</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="awe_lose"></string>
    <string name="awe_star"></string>
    <string name="awe_star_o"></string>
    <string name="awe_win"></string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="default_web_client_id">757594787098-r0f1h2ms8l25g7tcljbdfgm86vslr50k.apps.googleusercontent.com</string>
    <string name="firebase_database_url">https://shadowverse-log.firebaseio.com</string>
    <string name="gcm_defaultSenderId">757594787098</string>
    <string name="google_api_key">AIzaSyCkJQj01PHeK_1176e8lT1YphEOCh6hAj0</string>
    <string name="google_app_id">1:757594787098:android:869c226369b25952</string>
    <string name="google_crash_reporting_api_key">AIzaSyCkJQj01PHeK_1176e8lT1YphEOCh6hAj0</string>
    <string name="google_storage_bucket">shadowverse-log.appspot.com</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="table_head_name">デッキ名称</string>
    <string name="table_head_ord">手番</string>
    <string name="table_head_per">勝率</string>
    <string name="table_head_share">遭遇率</string>
    <string name="table_head_share2">使用率</string>
    <string name="table_head_sum">対戦数</string>
    <string name="table_head_win">勝利数</string>
    <string name="table_ord_ato">後攻 の戦績</string>
    <string name="table_ord_saki">先攻 の戦績</string>
    <string name="top_activity_button_login">作成済みの方：ログインする</string>
    <string name="top_activity_button_offline">オフラインで利用を開始する</string>
    <string name="top_activity_button_signup">新しくアカウント作成をする</string>
    <string name="top_activity_subject_offline">オフラインで利用する</string>
    <string name="top_activity_subject_online">オンラインで利用する</string>
    <string name="top_activity_text_offline">"ご利用中のスマートフォン端末にデータを保存します。
アプリ起動時に通信が発生します。
｢Shadowverse Log｣の一部の機能がご利用できない場合があります。
端末変更をした際に、データの移行はできません。
｢オフライン｣で記録したデータは｢オンライン｣に移動する事はできませんので、オンライン利用で開始される事をオススメします。"</string>
    <string name="top_activity_text_online">"Webサーバ上にアカウントを作成して、データをサーバに保存します。
アプリ起動・データ同期・記録の時に通信が発生します。
｢Shadowverse Log｣の全ての機能がご利用できます。
Webサイト版(PC/SP)の｢Shadowverse Log｣とデータが同期されます。
記録したデータは毎週発行している｢対戦解析ログ(メタレポート)｣に反映されます。
端末変更した際に、データの移行が可能です。"</string>
</resources>
